--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
             <div class="header__logo" data-scroll="#intro">ROGE</div>
 
             <nav class="nav" id="nav">
-                <a class="nav__link" href="" data-scroll="#about">О городе</a>
+                <a class="nav__link" data-scroll="#about">О городе</a>
                 <a class="nav__link" data-scroll="#services">Мероприятия</a>
                 <a class="nav__link" href="function checkScroll(scrollOffset)" data-scroll="#works">Галлерея</a>
                 <a class="nav__link" href="function checkScroll(scrollOffset)" data-scroll="#blog">Блог</a>
